[tool.poetry]
name = "preparatório-orm-logging"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.39"
requests = "^2.32.3"
pydantic = "^2.10.6"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
